<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/add_order_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_current_order"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:fontFamily="@font/custom_regular"
                    android:background="@drawable/round_primary_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/customize_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customize_selected_pizza"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:fontFamily="@font/custom_regular"
                    android:background="@drawable/round_primary_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/view_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_current_order"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:fontFamily="@font/custom_regular"
                    android:background="@drawable/round_primary_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/manage_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_store_order"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:fontFamily="@font/custom_regular"
                    android:background="@drawable/round_primary_background"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <LinearLayout
                    android:id="@+id/deluxe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="7dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_white_background">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/deluxe"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/hawai"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="7dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_white_background">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hawaiian"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/pepperon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="7dp"
                    android:background="@drawable/round_white_background">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pepperoni"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>